2011-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/gpasswd.1.xml: Document the difference between the -r and -R
	options.

2011-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* man/useradd.8.xml, man/groupadd.8.xml, man/usermod.8.xml,
	man/groupmod.8.xml: Avoid hardcoded values, and reference instead
	the configuration options (e.g. UID_MIN)
	* man/groupmod.8.xml, man/usermod.8.xml: Add missing reference to
	login.defs
	* man/login.defs.d/UID_MAX.xml, man/login.defs.d/SYS_UID_MAX.xml,
	man/login.defs.d/GID_MAX.xml, man/login.defs.d/SYS_GID_MAX.xml:
	Document the default values.

2011-11-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/gpasswd.c: Change of group password enforces gshadow
	password. Set /etc/group password to "x".

2011-11-16  Peter Vrabec  <pvrabec@redhat.com>

	* NEWS, src/userdel.c, man/userdel.8.xml: Add option -Z/--selinux-user.
	* libmisc/system.c, lib/prototypes.h, libmisc/Makefile.am: Removed
	safe_system().
	* lib/selinux.c, po/POTFILES.in, lib/prototypes.h,
	lib/Makefile.am: Added helper functions for semanage.
	* NEWS, README, src/useradd.c, src/usermod.c, src/userdel.c,
	configure.in: Use libsemanage instead of semanage.

2011-11-16  Peter Vrabec  <pvrabec@redhat.com>

	* src/Makefile.am: useradd may need the LIBATTR library.

2011-11-16  Peter Vrabec  <pvrabec@redhat.com>

	* libmisc/copydir.c: Ignore perm_copy_file() errors with errno set
	to ENOTSUP.

2011-11-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: Compilation fix when SHADOWGRP is not enabled.
	* libmisc/root_flag.c: Add missing #include <stdio.h>

2011-11-13  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.

2011-11-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c, src/chfn.c, src/chgpasswd.c, src/chpasswd.c,